--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
+    "@react-native-firebase/app": "^21.6.0",
+    "@react-native-firebase/auth": "^21.6.0",
+    "@react-native-firebase/firestore": "^21.6.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "react": "18.3.1",
+    "react-hook-form": "^7.54.0",
     "react-native": "0.75.4",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.14.0",
