--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,12 @@
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
+apply plugin: "com.google.gms.google-services"
+
+// project.ext.vectoricons = [
+//     iconFontNames: [ 'Ionicons.ttf', 'MaterialCommunityIcons.ttf' ] // Specify font files
+//     iconFontNames: [ 'Ionicons.ttf', 'MaterialCommunityIcons.ttf', 'MaterialIcons.ttf' ] // Specify font files
+// ]
 
 /**
  * This is the configuration block to customize your React Native Android app.
