--- a/package.json
+++ b/package.json
@@ -11,19 +11,27 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@hookform/resolvers": "^3.9.1",
     "@react-native-firebase/app": "^21.6.0",
     "@react-native-firebase/auth": "^21.6.0",
     "@react-native-firebase/firestore": "^21.6.0",
+    "@react-native-firebase/storage": "^21.6.1",
+    "@react-navigation/bottom-tabs": "^7.1.3",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "add": "^2.0.6",
     "react": "18.3.1",
     "react-hook-form": "^7.54.0",
+    "react-icons": "^5.4.0",
     "react-native": "0.75.4",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "yarn": "^1.22.22",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
