--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
 apply plugin: "com.google.gms.google-services"
 
-// project.ext.vectoricons = [
-//     iconFontNames: [ 'Ionicons.ttf', 'MaterialCommunityIcons.ttf' ] // Specify font files
-//     iconFontNames: [ 'Ionicons.ttf', 'MaterialCommunityIcons.ttf', 'MaterialIcons.ttf' ] // Specify font files
-// ]
+ project.ext.vectoricons = [
+     iconFontNames: [ 'Ionicons.ttf', 'MaterialCommunityIcons.ttf', 'MaterialIcons.ttf' ] 
+ ]
 
 /**
  * This is the configuration block to customize your React Native Android app.
