--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@bam.tech/react-native-image-resizer": "^3.0.11",
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@hookform/resolvers": "^3.9.1",
     "@react-native-firebase/app": "^21.6.0",
     "@react-native-firebase/auth": "^21.6.0",
     "@react-native-firebase/firestore": "^21.6.0",
-    "@react-native-firebase/storage": "^21.6.1",
+    "@react-native-firebase/storage": "21.6.0",
     "@react-navigation/bottom-tabs": "^7.1.3",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -26,6 +27,7 @@
     "react-icons": "^5.4.0",
     "react-native": "0.75.4",
     "react-native-encrypted-storage": "^4.0.3",
+    "react-native-image-picker": "^7.2.3",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
