--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-native-firebase/auth": "^21.6.0",
     "@react-native-firebase/firestore": "^21.6.0",
     "@react-native-firebase/storage": "21.6.0",
-    "@react-navigation/bottom-tabs": "^7.1.3",
+    "@react-navigation/bottom-tabs": "6.5.7",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "add": "^2.0.6",
